# farra_constexpr

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan_profile  conanfile.py  conanfile.txt  meson.build
benchmark/: main.cpp
conan/: conan_profile
docs/: function.md  interval_map.md
include/: function.hpp  interval_map.hpp  util.hpp
interval_map/: build.sh  meson.build
interval_map/src/: interval_map.cpp
src/: function.hpp  interval_map.cpp  interval_map.hpp  lifeobject.hpp  main.cpp  util.hpp
test/: copies.cpp  main.cpp  test.cpp
